[package]
name = "pinocchio-util-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
bpf-entrypoint = []
    
[dependencies]
pinocchio = "0.8.4"
pinocchio-log = "=0.4.0"
pinocchio-system = "0.2.3"
pinocchio-pubkey = "0.2.4"
pinocchio-util = { path = "../crates/core" }
pinocchio-derive = { path = "../crates/derive" }

num_enum = "0.7.4"

[profile.release]
codegen-units = 1
incremental = true
opt-level = 2
panic = "abort"
strip = true
debug = false
lto = false

[profile.test]
codegen-units = 256
debug = true
strip = false